[package]
name = "numers"
authors = ["roket64"]
description = "Number theory arithmetics and functions for Rust"
keywords = ["arithmetics", "numerics"]
categories = ["algorithms", "science"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roket64/numers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "numers"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
rand = "0.8.5"
rayon = "1.8.0"
